--- a/provision/gcp/single-node-cluster.jinja
+++ b/provision/gcp/single-node-cluster.jinja
@@ -1,4 +1,4 @@
-{% set CONF_CLUSTER_NAME = "single-node-cluster1" %}
+{% set CONF_CLUSTER_NAME = "example1.cluster" %}
 {% set CONF_REPO_URL = "https://github.com/infracamp/rudl-example.git" %}
 
 
